# fmi-rs

./: Cargo.toml  LICENSE  README.md
fmi-rs/: Cargo.toml  build.rs
fmi-rs-libxml2/: Cargo.toml  build.rs
fmi-rs-libxml2/src/: lib.rs
fmi-rs-libxml2/src/c/src/: fmi_rs_xsd.c
fmi-rs-libxml2/tests/: validation_test.rs
fmi-rs-libxml2/tests/resources/: invalid_fmi2.xml  invalid_fmi3.xml
fmi-rs-sundials/: Cargo.toml  build.rs
fmi-rs-sundials/src/: cvode.rs  cvode_ls.rs  lib.rs  nvector_serial.rs  solver.rs  sundials_context.rs  sundials_linearsolver.rs  sundials_matrix.rs  sundials_nvector.rs  sunlinsol_dense.rs  sunmatrix_dense.rs
fmi-rs/src/: build_description.rs  cmake.rs  fmi2.rs  fmi3.rs  lib.rs  model_description.rs  sim.rs  test_fixtures.rs  util.rs  zip.rs
fmi-rs/src/c/schema/: fmi_rs_xsd.c
fmi-rs/src/c/src/: logger_proxy.c  structured_variable_name.tab.c  structured_variable_name.tab.h  structured_variable_name.y  variable_name_validator.c
fmi-rs/src/fmi2/: builder.rs  log.rs  mod.rs  types.rs
fmi-rs/src/fmi3/: builder.rs  log.rs  mod.rs  types.rs
fmi-rs/src/model_description/: file.rs  fmi2.rs  fmi3.rs  mod.rs  validation.rs
fmi-rs/src/model_description/fmi2/: file.rs  mod.rs  validation.rs
fmi-rs/src/model_description/fmi3/: file.rs  validation.rs
fmi-rs/src/schema/: mod.rs
fmi-rs/src/sim/: euler.rs  fmi2.rs  fmi3.rs  mod.rs
fmi-rs/src/sim/fmi2/: cs.rs  csv.rs  input.rs  me.rs  mod.rs  recorder.rs
fmi-rs/src/sim/fmi3/: cs.rs  csv.rs  input.rs  me.rs  mod.rs  recorder.rs
fmi-rs/src/sundials/: cvode.rs  cvode_ls.rs  ida.rs  ida_ls.rs  mod.rs  nvector_serial.rs  solver.rs  sundials_context.rs  sundials_linearsolver.rs  sundials_matrix.rs  sundials_nonlinearsolver.rs  sundials_nvector.rs  sundials_types.rs  sunlinsol_dense.rs  sunmatrix_dense.rs  sunnonlinsol_newton.rs
fmi-rs/templates/: CMakeLists.txt
fmi-rs/tests/: build_description_test.rs  build_test.rs  cvode_tests.rs  fmi2_tests.rs  fmi3_tests.rs  ida_test.rs  validation_tests.rs
fmi-rs/tests/resources/: .gitignore
fmi-rs/tests/resources/fmi2/: Feedthrough_in.csv
