[package]
name = "fmi-rs"
description = "Functional Mock-up Interface (FMI) for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["zip"]
schema = []
sundials = []
test-fixtures = ["dep:reqwest", "dep:anyhow"]
zip = ["dep:zip"]

[dependencies]
anyhow = {version = "1.0.103", optional = true }
approx = "0.5.1"
askama = "0.16.0"
colored = "3.1.1"
csv = "1.4.0"
libloading = "0.9.0"
quick-xml = { version = "0.36", features = ["serialize"] }
reqwest = { version = "0.13.4", features = ["blocking"], optional = true }
roxmltree = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0.18"
url = "2"
zip = { version = "8.6", optional = true }

[build-dependencies]
cc = "1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[dev-dependencies]
fmi-rs = { path = ".", features = ["test-fixtures", "sundials"] }
rstest = "0.26.1"
